Update example for Java 19